compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__strings__ascii_as_unicode_escape_sequence.snap
---
source: compiler-core/src/javascript/tests/strings.rs
expression: "\npub fn y() -> String {\n  \"\\u{79}\"\n}\n"
---
----- SOURCE CODE

pub fn y() -> String {
  "\u{79}"
}


----- COMPILED JAVASCRIPT
export function y() {
  return "\u{79}";
}
