compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__strings__discard_concat_rest_pattern.snap
---
source: compiler-core/src/javascript/tests/strings.rs
expression: "\npub fn go(x) {\n  case x {\n    \"Hello, \" <> _ -> Nil\n    _ -> Nil\n  }\n}\n"
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    "Hello, " <> _ -> Nil
    _ -> Nil
  }
}


----- COMPILED JAVASCRIPT
export function go(x) {
  if (x.startsWith("Hello, ")) {
    return undefined;
  } else {
    return undefined;
  }
}
