compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__strings__string_patterns.snap
---
source: compiler-core/src/javascript/tests/strings.rs
expression: "\nfn go(x) {\n  let assert \"Hello\" = x\n}\n"
---
----- SOURCE CODE

fn go(x) {
  let assert "Hello" = x
}


----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

function go(x) {
  if (x !== "Hello") {
    throw makeError(
      "let_assert",
      "my/mod",
      3,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: x }
    )
  }
  return x;
}
