compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__strings__unicode1.snap
---
source: compiler-core/src/javascript/tests/strings.rs
expression: "\npub fn emoji() -> String {\n  \"\\u{0001f600}\"\n}\n"
---
export function emoji() {
  return "\u{0001f600}";
}

